Fix an issue which the app footer is hidden by study cards

--- a/src/assets/css/AppShell/WCAppFooter.css
+++ b/src/assets/css/AppShell/WCAppFooter.css
@@ -7,6 +7,7 @@
     justify-content: space-between;
     background-color: #f6f6f6;
     height: 4rem;
+    z-index: 10000;
 }
 
 .WCAppFooter a {
